# rtvc

./: .python-version  Dockerfile  Makefile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  main.yml  test.yml
app/: authn.py  config.py  main.py  pydantic64.py  pydantic64_test.py
app/gateway/: twilio.py
app/models/: call.py  call_test.py  contact.py  validators.py
app/routers/: api.py  ws.py
app/routers/api/: calls.py  models.py  models_test.py  v1.py
docs/: design.md  development.md
scripts/: add-user.py  make-call.sh
